# Warzone

./: .gitignore  CMakeLists.txt  CardDriver.cpp  Cards.cpp  Cards.h  GameEngine.cpp  GameEngine.h  GameObserverDriver.cpp  GameObservers.cpp  GameObservers.h  Map.cpp  Map.h  MapDriver.cpp  MapLoader.cpp  MapLoader.h  MapLoaderDriver.cpp  Orders.cpp  Orders.h  Orders.sln  Orders.vcxproj  Orders.vcxproj.filters  OrdersDriver.cpp  Player.cpp  Player.h  PlayerDriver.cpp  PlayerStrategies.cpp  PlayerStrategies.h  PlayerStrategiesDriver.cpp  README.md  WarzoneA1.sln  WarzoneA1.vcxproj  WarzoneA1.vcxproj.filters
Debug/: Orders.vcxproj.FileListAbsolute.txt  Project.exe.recipe  Project.ilk  orders.obj.enc  vc142.idb
Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
enc_temp_folder/2e1aeec52a78ee53c56df1a8ba82c94/: Player.cpp
testing/Andorra/: Andorra.map
testing/brasil/: brasil.cards
testing/europe/: europe.map
testing/haiti/: haiti.cards
